--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .Header{
     background-color: red;
     height: 100px;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
