--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,10 @@
   align-items: center;
   
 }
+
+.BinsButtons{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
